<resources>
    <string name="app_name">BrightEventsAndroidApp</string>
    <string name="app_title">Bright Events</string>
    <string name="slogan">We handle your event needs.</string>
    <string name="sign_up_button_text">Get Started</string>
    <string name="sign_up_title">Sign Up!</string>
    <string name="email">example@example.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_title">Email</string>
    <string name="sign_in_title">Sign In</string>
    <string name="nav_all_events">All Events</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="eventname">Eventname</string>
    <string name="edit_event">Edit</string>
    <string name="delete">Delete</string>
    <string name="rsvp">RSVP</string>
    <string name="sign_up_now_button">Sign Up!</string>
    <string name="signin_to_signup_textview">Don\'t have an account?</string>
    <string name="signup_to_signin_instruction_textview">Already have an account?</string>
    <string name="please_wait">Please wait...</string>
</resources>
