<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            android:id="@+id/signinTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="18dp"
            android:text="@string/sign_in_title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="23dp" />

        <EditText
            android:id="@+id/signinEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email" />

        <EditText
            android:id="@+id/signinUsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="169dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="104dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password"/>

        <TextView
            android:id="@+id/signinEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signinEmailEditText"
            android:layout_alignStart="@+id/signinEmailEditText"
            android:text="@string/email_title"
            android:layout_alignLeft="@+id/signinEmailEditText" />

        <TextView
            android:id="@+id/signinUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signinEmailEditText"
            android:layout_below="@+id/signinEmailEditText"
            android:text="@string/username"
            android:layout_alignLeft="@+id/signinEmailEditText" />

        <TextView
            android:id="@+id/signinPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signinEmailEditText"
            android:layout_below="@+id/signinUsernameEditText"
            android:layout_marginTop="-169dp"
            android:text="@string/password"
            android:layout_alignLeft="@+id/signinEmailEditText" />

    </RelativeLayout>